Updated services, added env swagger host, finished ConfigurationController api doc
