# app/Models/UserRoles.php
@@ -8,7 +8,7 @@ use Illuminate\Database\Eloquent\Model;
 /**
  *
  * @OA\Schema(
- * required={"password"},
+ * required={"name", "email"},
  * @OA\Xml(name="UserRoles"),
  * @OA\Property(property="id", type="integer", readOnly="true", example="1"),
  * @OA\Property(property="name", type="string", description="Name of the user", example="John Doe"),
